package InterfaceDAO;

public interface GenreDao {
}
