@startuml
class System.Application {
~ LibraryController controller
+ {static} void main(String[])
+ void run()
}


class JDBCandDAO.JdbcAuthorDao {
- JdbcTemplate jdbcTemplate
}

class RowMappers.BookRowMapper {
+ Book mapRow(ResultSet,int)
}

interface InterfaceDAO.LoanDao {
}
interface System.Interfaces.Output {
~ void print(String)
~ void printError(String)
~ void printLogo()
~ int printMainMenu()
~ int printBookMenu()
~ void printBook(Book)
}

interface InterfaceDAO.AuthorDao {
}
class JDBCandDAO.JdbcGenreDao {
- JdbcTemplate jdbcTemplate
}

class RowMappers.LoanRowMapper {
+ Loan mapRow(ResultSet,int)
}

class Exception.DaoException {
}
class System.SystemInput {
- Scanner scr
+ String getInput()
+ String promtChoice(String)
}


class System.Connector {
- BasicDataSource dataSource
+ BasicDataSource getDataSource()
}


class RowMappers.GenreRowMapper {
+ Genre mapRow(ResultSet,int)
}

class ClassesDOJO.Genre {
- long id
- String genreName
+ long getId()
+ void setId(long)
+ String getGenreName()
+ void setGenreName(String)
}


interface InterfaceDAO.BookDao {
~ List<Book> getAllBooks()
~ List<Book> getBookByTile(String)
~ List<Book> getBookByAuthorFullName(String,String)
}

class ClassesDOJO.Reader {
- long id
- String readerFirstName
- String readerLastName
- String address
- String phoneNumber
- String eMail
+ long getId()
+ void setId(long)
+ String getReaderFirstName()
+ void setReaderFirstName(String)
+ String getReaderLastName()
+ void setReaderLastName(String)
+ String getAddress()
+ void setAddress(String)
+ String getPhoneNumber()
+ void setPhoneNumber(String)
+ String geteMail()
+ void seteMail(String)
}


class System.InputCheck {
+ boolean isCorrect(String,int)
}

abstract class RowMappers.AuthorRowMapper {
+ Author mapRow(ResultSet,int)
}

interface System.Interfaces.Input {
~ String getInput()
~ String promtChoice(String)
}

interface InterfaceDAO.GenreDao {
}
class ClassesDOJO.Author {
- long id
- String authorFirstName
- String authorLastName
~ LocalDate birthday
~ LocalDate deathDate
+ long getId()
+ void setId(long)
+ String getAuthorFirstName()
+ void setAuthorFirstName(String)
+ String getAuthorLastName()
+ void setAuthorLastName(String)
+ LocalDate getBirthday()
+ void setBirthday(LocalDate)
+ LocalDate getDeathDate()
+ void setDeathDate(LocalDate)
}


interface System.Interfaces.CheckChoice {
~ boolean isCorrect(String,int)
}

class ClassesDOJO.Loan {
- long loanId
- long readerId
- long copyId
- OffsetDateTime loanedAt
- OffsetDateTime dueAt
- OffsetDateTime returnedAt
+ long getLoanId()
+ void setLoanId(long)
+ long getReaderId()
+ void setReaderId(long)
+ long getCopyId()
+ void setCopyId(long)
+ OffsetDateTime getLoanedAt()
+ void setLoanedAt(OffsetDateTime)
+ OffsetDateTime getDueAt()
+ void setDueAt(OffsetDateTime)
+ OffsetDateTime getReturnedAt()
+ void setReturnedAt(OffsetDateTime)
}


class System.LibraryController {
~ Output out
~ Input input
~ CheckChoice check
~ Connector connect
~ BookDao jdbcBookDao
+ void mainMenuNavigation()
- boolean navigationMain(String)
- boolean navigationBook(String)
}


class JDBCandDAO.JdbcReaderDao {
- JdbcTemplate jdbcTemplate
}

class RowMappers.ReaderRowMapper {
+ Reader mapRow(ResultSet,int)
}

interface InterfaceDAO.ReaderDao {
}
class System.SystemOutput {
+ void print(String)
+ void printError(String)
+ void printBook(Book)
+ void printLogo()
+ int printMainMenu()
+ int printBookMenu()
}

class JDBCandDAO.JdbcLoanDao {
- JdbcTemplate jdbcTemplate
}

class JDBCandDAO.JdbcBookDao {
- JdbcTemplate jdbcTemplate
- BookRowMapper mapper
+ List<Book> getAllBooks()
+ List<Book> getBookByTile(String)
+ List<Book> getBookByAuthorFullName(String,String)
}


class ClassesDOJO.Book {
- long id
- String title
- LocalDate publishDate
- int countStock
+ long getId()
+ void setId(long)
+ String getTitle()
+ void setTitle(String)
+ LocalDate getPublishDate()
+ void setPublishDate(LocalDate)
+ int getCountStock()
+ void setCountStock(int)
+ String toString()
}




org.springframework.jdbc.core.RowMapper <|.. RowMappers.BookRowMapper
org.springframework.jdbc.core.RowMapper <|.. RowMappers.LoanRowMapper
Exception.RuntimeException <|-- Exception.DaoException
System.Interfaces.Input <|.. System.SystemInput
org.springframework.jdbc.core.RowMapper <|.. RowMappers.GenreRowMapper
System.Interfaces.CheckChoice <|.. System.InputCheck
org.springframework.jdbc.core.RowMapper <|.. RowMappers.AuthorRowMapper
org.springframework.jdbc.core.RowMapper <|.. RowMappers.ReaderRowMapper
System.Interfaces.Output <|.. System.SystemOutput
InterfaceDAO.BookDao <|.. JDBCandDAO.JdbcBookDao
@enduml